feat(donate): add discount window to shop items
